# alchemy-old

./: .gitignore  CMakeLists.txt  arm64_ops.csv  compile.cpp  compile.h  features.h  main.cpp  permute.h  ut.c  ut.h
aim/: CMakeLists.txt  features.h
analysis/: CMakeLists.txt  inline.cpp  inline.h
arm/: CMakeLists.txt  iclass.c  iclass.h  igroup.c  igroup.h  instruction.cpp  instruction.h  op_table.c  op_table.h
disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.h  pcode.cpp  pcode.h  program.cpp  program.h
samples/: algorithms  for_loops.c
tests/: CMakeLists.txt  algorithms.c  compile.txt  for_loops  main.py  testCompile.cpp  testCompile.h  tests.cpp  tests.h
tests/elf/: for_loops
